Implement category in Spring Boot