@@ -16,6 +16,7 @@
     <properties>
         <java.version>15</java.version>
         <testcontainers.version>1.15.2</testcontainers.version>
+        <jackson-bom.version>2.12.2</jackson-bom.version>
     </properties>
     <dependencies>
         <dependency>
@@ -112,6 +113,15 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
